--- a/stock_visualization/templates/assets.html
+++ b/stock_visualization/templates/assets.html
@@ -24,6 +24,8 @@
     <div id="result_div" style="width: 600px;height:400px;">
 
     </div>
+    <div id="rates_div" style="width: 600px;height:400px;">
+    </div>
 
     <script type="text/javascript" src="/static/js/d3.min.js"></script>
     <script type="text/javascript" src="/static/js/jquery-1.12.4.min.js"></script>
