reorg js files structure, add deploy script

--- a/stock_visualization/templates/assets.html
+++ b/stock_visualization/templates/assets.html
@@ -27,10 +27,9 @@
     <div id="rates_div" style="width: 600px;height:400px;">
     </div>
 
-    <script type="text/javascript" src="/static/js/d3.min.js"></script>
     <script type="text/javascript" src="/static/js/jquery-1.12.4.min.js"></script>
     <script type="text/javascript" src="/static/js/jquery-ui.min.js"></script>
     <script type="text/javascript" src="/static/js/echarts.min.js"></script>
-    <script type="text/javascript" src="/static/js/balance.js"></script>
+    <script type="text/javascript" src="/static/js/customized/balance.js"></script>
 </body>
 </html>
