--- a/stock_visualization/templates/assets.html
+++ b/stock_visualization/templates/assets.html
@@ -21,10 +21,10 @@
             <input type="button" value="Search" id="search_button">
         </form>
     </div>
-    <div id="result_div" style="width: 600px;height:400px;">
+    <div id="result_div" style="margin-left:auto; margin-right: auto; width: 90%; min-width: 600px; min-height: 400px;">
 
     </div>
-    <div id="rates_div" style="width: 600px;height:400px;">
+    <div id="rates_div" style="margin-left:auto; margin-right: auto; width: 90%; min-width: 600px; min-height: 400px;">
     </div>
 
     <script type="text/javascript" src="/static/js/jquery-1.12.4.min.js"></script>
