--- a/stock_visualization/templates/stock_profits.html
+++ b/stock_visualization/templates/stock_profits.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Asset Trend</title>
+    <title>Stock Profit Trend</title>
     <link rel="stylesheet" href="/static/css/jquery-ui.min.css">
 </head>
 <body>
@@ -25,7 +25,7 @@
             <input type="button" value="Search" id="search_button">
         </form>
     </div>
-    <div id="result_div" style="width: 600px;height:400px;">
+    <div id="result_div" style="margin-left:auto; margin-right: auto; width: 90%; min-width: 600px; min-height: 400px;">
     </div>
 
     <script type="text/javascript" src="/static/js/jquery-1.12.4.min.js"></script>
