add stock pie chart

--- a/stock_visualization/templates/stock_profits.html
+++ b/stock_visualization/templates/stock_profits.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="/static/css/jquery-ui.min.css">
 </head>
 <body>
+    <div id="stock_pie" style="margin-left:auto; margin-right: auto; width: 90%; min-width: 600px; min-height: 400px;">
+    </div>
     <div id="criteria_div">
         <form id="criteria_form" name="criteria_form" method="post">
             <table>
