--- a/stock_visualization/templates/account_view.html
+++ b/stock_visualization/templates/account_view.html
@@ -4,8 +4,8 @@
 {% endblock %}
 
 {% block customized_js %}
-    <script type="text/javascript" src="/static/js/jquery-ui.min.js"></script>
-    <script type="text/javascript" src="/static/js/echarts.min.js"></script>
+    <script type="text/javascript" src="/static/js/vendor/jquery-ui.min.js"></script>
+    <script type="text/javascript" src="/static/js/vendor/echarts.min.js"></script>
     <script type="text/javascript" src="/static/js/customized/stock_profits.js"></script>
 {% endblock %}
 
