--- a/stock_visualization/templates/assets.html
+++ b/stock_visualization/templates/assets.html
@@ -27,9 +27,9 @@
     <div id="rates_div" style="margin-left:auto; margin-right: auto; width: 90%; min-width: 600px; min-height: 400px;">
     </div>
 
-    <script type="text/javascript" src="/static/js/jquery-1.12.4.min.js"></script>
-    <script type="text/javascript" src="/static/js/jquery-ui.min.js"></script>
-    <script type="text/javascript" src="/static/js/echarts.min.js"></script>
+    <script type="text/javascript" src="/static/js/vendor/jquery-1.12.4.min.js"></script>
+    <script type="text/javascript" src="/static/js/vendor/jquery-ui.min.js"></script>
+    <script type="text/javascript" src="/static/js/vendor/echarts.min.js"></script>
     <script type="text/javascript" src="/static/js/customized/balance.js"></script>
 </body>
 </html>
