--- a/stock_visualization/templates/layout.html
+++ b/stock_visualization/templates/layout.html
@@ -78,13 +78,13 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="/static/js/jquery-1.12.4.min.js"></script>
-    <script src="/static/js/bootstrap.min.js"></script>
+    <script src="/static/js/vendor/jquery-1.12.4.min.js"></script>
+    <script src="/static/js/vendor/bootstrap.min.js"></script>
 
     {% block customized_js %}
     {% endblock customized_js %}
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="/static/js/ie10-viewport-bug-workaround.js"></script>
+    <script src="/static/js/vendor/ie10-viewport-bug-workaround.js"></script>
   </body>
 </html>
