--- a/stock_visualization/templates/login.html
+++ b/stock_visualization/templates/login.html
@@ -38,11 +38,11 @@
 
     <!-- Bootstrap core JavaScript
     ==================================================
-    <script src="/static/js/bootstrap.min.js"></script>
+    <script src="/static/js/vendor/bootstrap.min.js"></script>
     -->
     <!-- Placed at the end of the document so the pages load faster -->
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
 
-    <!-- <script src="/static/js/ie10-viewport-bug-workaround.js"></script>-->
+    <!-- <script src="/static/js/vendor/ie10-viewport-bug-workaround.js"></script>-->
   </body>
 </html>
