--- a/stock_visualization/templates/mobile/hold_stocks.html
+++ b/stock_visualization/templates/mobile/hold_stocks.html
@@ -4,12 +4,12 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="/static/css/mobile/jquery.mobile-1.4.5.min.css">
 
-<script src="/static/js/jquery-1.12.4.min.js"></script>
+<script src="/static/js/vendor/jquery-1.12.4.min.js"></script>
 <script src="/static/js/mobile/jquery.mobile-1.4.5.min.js"></script>
 </head>
 <body>
     <div data-role="page" id="secondpage">
-    <script src="/static/js/echarts.min.js"></script>
+    <script src="/static/js/vendor/echarts.min.js"></script>
         <div data-role="header" data-position="fixed">
             <a href="#reportpage">Return</a>
             <h1 id="titlename" class="title_text_color">Hold Stocks</h1>
