--- a/stock_visualization/templates/mobile/index.html
+++ b/stock_visualization/templates/mobile/index.html
@@ -22,7 +22,7 @@
 
     </div>
 
-    <script type="text/javascript" src="/static/js/jquery-1.12.4.min.js"></script>
+    <script type="text/javascript" src="/static/js/vendor/jquery-1.12.4.min.js"></script>
     <script type="text/javascript" src="/static/js/mobile/jquery.mobile-1.4.5.min.js"></script>
 </body>
 </html>
