--- a/stock_visualization/templates/mobile/test.html
+++ b/stock_visualization/templates/mobile/test.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet"
     href="/static/css/mobile/jquery.mobile-1.4.5.min.css">
 
-<script src="/static/js/jquery-1.12.4.min.js"></script>
+<script src="/static/js/vendor/jquery-1.12.4.min.js"></script>
 <script src="/static/js/mobile/jquery.mobile-1.4.5.min.js"></script>
 </head>
 <body>
