--- a/stock_visualization/templates/layout_dashboard.html
+++ b/stock_visualization/templates/layout_dashboard.html
@@ -46,9 +46,21 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">Account</a></li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Account <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li><a href="/overview">Overview</a></li>
+                <li><a href="/assets_trend">Assets Trend</a></li>
+                <li><a href="/stock_profit_trend">Stock Profit Trend</a></li>
+                <li><a href="/edit_assets">Manually Input Assets</a></li>
+                <li role="separator" class="divider"></li>
+                <li class="dropdown-header">Nav header</li>
+                <li><a href="#">Separated link</a></li>
+                <li><a href="#">One more separated link</a></li>
+              </ul>
+            </li>
             <li><a href="http://benamazing.cn">Intelligence</a></li>
-            <li><a href="#"></a>Others</li>
+            <li><a href="#">Others</a></li>
             <li><a href="/logout">Logout</a></li>
           </ul>
           <form class="navbar-form navbar-right">
@@ -60,6 +72,7 @@
 
     <div class="container-fluid">
       <div class="row">
+        <!--
         <div class="col-sm-3 col-md-2 sidebar">
           <ul class="nav nav-sidebar">
             <li><a href="/overview">Overview</a></li>
@@ -74,13 +87,8 @@
             <li><a href="/ref5">Another nav item</a></li>
             <li><a href="/ref5">More navigation</a></li>
           </ul>
-<!--          <ul class="nav nav-sidebar">
-            <li><a href="">Nav item again</a></li>
-            <li><a href="">One more nav</a></li>bar
-            <li><a href="">Another nav item</a></li>
-          </ul>
--->
         </div>
+        -->
 
         {% block MainPanel %}
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
